# energy

./: .gitignore  API.md  BULK.md  CLAUDE.md  EXCEL-FILES.md  GUI-PLAN.md  NATURAL-GAS-USAGE.md  README.md  TESTING.md  XCEL-FRANCHISE.md  main.py  pyproject.toml  requirements.txt
eia/: NOTES.md  bulk.py  bulk_downloader.py  cli.py  client.py  downloader.py  inventory.py  pub_catalog.py  pub_downloader.py  publications.py  schema.py  storage.py
r/: .gitignore  NOTES.md  app.R  load.R  setup.R
tests/: conftest.py  test_inventory.py  test_schema.py
tui/: app.py
