[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "energy"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.34",
    "rich>=15.0",
    "python-dotenv>=1.2",
    "pandas>=2.0",
    "pyarrow>=15.0",
]

[project.scripts]
energy = "eia.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["eia"]
